--- a/frontend/latencyzero_client/src/index.html
+++ b/frontend/latencyzero_client/src/index.html
@@ -5,7 +5,7 @@
   <title>LatencyzeroClient</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/logo2_yellow.png">
 </head>
 <body class="font-sans">
   <app-root></app-root>
